# Minimum required version of CMake
cmake_minimum_required(VERSION 3.10)

# Project name
project(JMSP)

# Turn on the ability to create folders to organize projects (.vcproj)
# It creates "CMakePredefinedTargets" folder by default and adds CMake
# defined projects like INSTALL.vcproj and ZERO_CHECK.vcproj
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

# Add JMSPEngine project
add_subdirectory(JMSPEngine)

# Add JMSPEditor project
add_subdirectory(JMSPEditor)